# vdo-ld

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yml  windows-release.yml
docs/: vdo-dl — Mockup Phase 1+2.html
docs/vdo-dl — Mockup Phase 1+2_files/: css2
scripts/: release.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: index.html  mockup.html
