[package]
name = "vdo-dl-app"
version = "0.1.1"
description = "vdo-dl — GUI โหลดวิดีโอ (Tauri) ครอบ core เดียวกับ CLI"
authors = ["bird"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# core logic ตัวเดียวกับ CLI (src/lib.rs ของ crate vdo-dl)
vdo-dl = { path = ".." }
